<resources>
    <string name="app_name">Ukrgram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_user_name">Vanya Sivak</string>
    <string name="settings_default_status">online</string>
    <string name="settings_text_account">Account</string>
    <string name="settings_default_number">+380981010101</string>
    <string name="settings_label_phone_number">Click to change phone number</string>
    <string name="settings_default_login">vanyafc</string>
    <string name="settings_status_login">Username</string>
    <string name="settings_default_bio">About me</string>
    <string name="settings_label_bio">Write a little about yourself</string>
    <string name="settings_menu_change_name">Change name</string>
    <string name="clear_chat">Clear chat</string>
    <string name="settings_menu_exit">Exit</string>
    <string name="register_text_enter_code">Enter a code</string>
    <string name="register_text_sms">We sent an SMS with a verification code to your phone</string>
    <string name="register_hint_default_code">Enter your code...</string>
    <string name="cd_register_image"></string>
    <string name="register_title_your_phone">Your phone</string>
    <string name="register_toast_enter_phone">Enter phone number</string>
    <string name="register_phone_hint">Phone number...</string>
    <string name="settings_hint_input_name">Name</string>
    <string name="settings_hint_input_surname">Surname</string>
    <string name="settings_toast_name_is_empty">Name cannot be empty</string>
    <string name="toast_data_update">Data updated</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_hint_input_bio">bio</string>
    <string name="delete_chat">Delete chat</string>
    <string name="online_state_string">online</string>
    <string name="offline_state_string">offline</string>
    <string name="hint_message">Message…</string>
    <string name="enter_message">Enter the message</string>
    <string name="user_already_taken">This user name is already taken</string>
    <string name="field_empty">The field is empty</string>
    <string name="chat_cleared">Chat cleared</string>
    <string name="chat_delete">Chat delete</string>
    <string name="welcome_to_ukrgram">Welcome to Ukrgram</string>

    <!-- MENU -->
    <string name="menu_create_group">Create a group</string>
    <string name="menu_create_secret_chat">Create a secret chat</string>
    <string name="menu_create_channel">Create a channel</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_calls">Calls</string>
    <string name="menu_favorites">Favorites</string>
    <string name="Settings">Settings</string>
    <string name="menu_invite_friends">Invite friends</string>
    <string name="menu_questions">Questions about  Ukrgram</string>

    <!-- MENU -->

    <!-- TOOLBAR -->

    <string name="toolbar_add_participant">Add a participant</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_contacts">Contacts</string>
    <string name="toolbar_create_group">Create a group</string>



    <!-- TOOLBAR -->
    <!-- GROUP -->
    <string name="name_group">Enter a group name</string>


    <!-- GROUP -->




    <plurals name="count_members">
        <item quantity="one">%d participant</item>
        <item quantity="other">%d participants</item>
    </plurals>
</resources>